[gd_scene load_steps=6 format=3 uid="uid://b7w6g37vfuwxo"]

[ext_resource type="Script" path="res://scripts/atar.gd" id="1_l2ys8"]
[ext_resource type="Texture2D" uid="uid://br3flomqo3dnv" path="res://resources/icons/阿塔_莱赞.jpg" id="1_n6sv1"]
[ext_resource type="Texture2D" uid="uid://coh4mvbgcguix" path="res://resources/icons/阿塔_女祭司.webp" id="2_vl5e5"]
[ext_resource type="Texture2D" uid="uid://caacee4ac3i6o" path="res://resources/icons/阿塔_沃卡尔.webp" id="3_bc7fe"]
[ext_resource type="Texture2D" uid="uid://dljfvwbrsfsec" path="res://resources/icons/阿塔_亚兹码.webp" id="4_n3qet"]

[node name="Atar" type="Node2D"]
script = ExtResource("1_l2ys8")

[node name="Lazan" type="Button" parent="."]
offset_left = 54.0
offset_top = 53.0
offset_right = 266.0
offset_bottom = 236.0

[node name="TextureRect" type="TextureRect" parent="Lazan"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 206.0
offset_bottom = 175.0
texture = ExtResource("1_n6sv1")
expand_mode = 1

[node name="Maid" type="Button" parent="."]
offset_left = 582.0
offset_top = 53.0
offset_right = 794.0
offset_bottom = 236.0

[node name="TextureRect" type="TextureRect" parent="Maid"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 206.0
offset_bottom = 175.0
texture = ExtResource("2_vl5e5")
expand_mode = 1

[node name="Valokar" type="Button" parent="."]
offset_left = 54.0
offset_top = 317.0
offset_right = 266.0
offset_bottom = 500.0

[node name="TextureRect" type="TextureRect" parent="Valokar"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 206.0
offset_bottom = 175.0
texture = ExtResource("3_bc7fe")
expand_mode = 1

[node name="Yazma" type="Button" parent="."]
offset_left = 582.0
offset_top = 317.0
offset_right = 794.0
offset_bottom = 500.0

[node name="TextureRect" type="TextureRect" parent="Yazma"]
layout_mode = 0
offset_left = 8.0
offset_top = 5.0
offset_right = 206.0
offset_bottom = 175.0
texture = ExtResource("4_n3qet")
expand_mode = 1

[node name="Back" type="Button" parent="."]
offset_left = 505.0
offset_top = 559.0
offset_right = 650.0
offset_bottom = 616.0
text = "返回上一级"

[connection signal="pressed" from="Lazan" to="." method="_on_lazan_pressed"]
[connection signal="pressed" from="Maid" to="." method="_on_maid_pressed"]
[connection signal="pressed" from="Valokar" to="." method="_on_valokar_pressed"]
[connection signal="pressed" from="Yazma" to="." method="_on_yazma_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
